--- a/R_source_code/R-3.6.2/src/include/abd_tool/displayer/custom/css/index.css
+++ b/R_source_code/R-3.6.2/src/include/abd_tool/displayer/custom/css/index.css
@@ -1,17 +1,25 @@
+body {
+	background-image: url('../../img/bg.jpg');
+	background-repeat: round;
+}
+
 #content {
-    height: 0 !important; /* hack :) */
+	height: 0 !important; /* hack :) */
 }
 
 #wrapper {
-    height: 100%;
-    width: 100%;
+	height: 100%;
+	width: 100%;
 }
 
 [data-path] {
-    background-color: white;
+	background-color: white;
 }
 
-div[data-path="/1/1"], div[data-path="/2/1"], div[data-path="/2/2/1"], div[data-path="/2/2/2"] {
-    overflow-x: hidden;
-    overflow-y: auto;
+div[data-path="/1/1"],
+div[data-path="/2/1"],
+div[data-path="/2/2/1"],
+div[data-path="/2/2/2"] {
+	overflow-x: hidden;
+	overflow-y: auto;
 }
