--- a/R_source_code/R-3.6.2/src/include/abd_tool/displayer/index.html
+++ b/R_source_code/R-3.6.2/src/include/abd_tool/displayer/index.html
@@ -45,12 +45,13 @@
             <div class="h-100 w-100 pane-opacity" data-path="/2">
                 <div class="container-fluid h-100">
                     <div class="row h-100">
-                        <div class="col-lg h-100 p-3 border overflow-auto" data-path="/2/1">
-                            <div class="row flex-grow-1 overflow-hidden">
+                        <div class="col-lg h-100 border overflow-auto" data-path="/2/1">
+                            
+                            <div class="row flex-grow-1">
                                 <div class="container-fluid mt-1">
-                                    <label class="inner-title" for="dropdownMenuButton">Code</label>
+                                    <label class="inner-title" >Code</label>
                                 </div>
-                                <div class="col-lg h-100 p-3 overflow-auto">
+                                <div class="col-lg h-100 p-3">
                                     <p>Some code</p>
                                     <p>Some code</p>
                                     <p>Some code</p>
@@ -89,9 +90,7 @@
                                             <button aria-expanded="false" aria-haspopup="true"
                                                     class="btn btn-secondary btn-sm dropdown-toggle"
                                                     data-toggle="dropdown" id="dropdownMenuButton"
-                                                    type="button">
-                                                Select
-                                            </button>
+                                                    type="button">Select</button>
                                             <div aria-labelledby="dropdownMenuButton" class="dropdown-menu">
                                                 <div class="dropdown-item">
                                                     <input type="checkbox" value="">
