--- a/R_source_code/R-3.6.2/src/include/abd_tool/displayer/index.html
+++ b/R_source_code/R-3.6.2/src/include/abd_tool/displayer/index.html
@@ -67,24 +67,6 @@
                                         <button type="button" class="btn btn-secondary btn-sm float-right" data-toggle="modal" data-target="#track_modal">
                                             Track objects
                                         </button>
-                                        
-                                        <div class="modal fade" id="track_modal" tabindex="-1" role="dialog" aria-labelledby="trackModalLabel" aria-hidden="true">
-                                            <div class="modal-dialog modal-width modal-settings bg-white" role="document">
-                                              <div class="modal-content">
-                                                <div class="modal-header">
-                                                  <h5 class="modal-title dialog-title" id="modalTitle" >Select objects to track</h5>
-                                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                    <span aria-hidden="true">&times;</span>
-                                                  </button>
-                                                </div>
-                                                <div class="modal-body modal-settings-body" id="modal_body">
-                                                </div>
-                                                <div class="modal-footer">
-                                                  <button type="button" class="btn btn-secondary modal-track-bto" onclick="updateDisplay();" data-dismiss="modal">Close</button>
-                                                </div>
-                                              </div>
-                                            </div>
-                                        </div>
                                     </div>
                                     <div class="col-lg h-100 p-3 overflow-auto" id="objects_container">
                                     
@@ -104,6 +86,46 @@
                 </div>
             </div>
         </div>
+    </div>
+</div>
+
+<!-- MODALS HERE-->
+<!--Track objects selection-->
+<div class="modal fade" id="track_modal" tabindex="-1" role="dialog" aria-labelledby="trackModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-width modal-settings bg-white" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title dialog-title" id="modalTitle" >Select objects to track</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body modal-settings-body" id="modal_body">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary modal-track-bto" onclick="updateDisplay();" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+</div>
+
+<!--Context selection-->
+<div class="modal fade " id="context_modal" tabindex="-1" role="dialog" aria-labelledby="contextModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-width modal-settings bg-white" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title dialog-title" id="context_modal_title">Select the context</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body modal-settings-body dialog-text" id="context_modal_body">
+            
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary modal-track-bto" data-dismiss="modal">Close</button>
+        </div>
+      </div>
     </div>
 </div>
 
