--- a/R_source_code/R-3.6.2/src/include/abd_tool/displayer/index.html
+++ b/R_source_code/R-3.6.2/src/include/abd_tool/displayer/index.html
@@ -30,7 +30,7 @@
                     type="button">Execution Flow
             </button>
             <label class="ml-5 mt-2">At Function: <label class="ml-1 bar-rhs" id="func_name_label">NA</label></label>
-            <label class="ml-4">Environemnt:<label class="ml-1 bar-rhs" id="env_label">NA</label></label> </label>
+            <label class="ml-4">Environment:<label class="ml-1 bar-rhs" id="env_label">NA</label></label> </label>
             <label class="float-right d-block menu-title my-auto">[ABD_Tool]</label>
             
         </div>
