--- a/R_source_code/R-3.6.2/src/include/abd_tool/displayer/custom/css/index.css
+++ b/R_source_code/R-3.6.2/src/include/abd_tool/displayer/custom/css/index.css
@@ -32,11 +32,31 @@ div {
 	background: rgba(255, 255, 255, 0);
 }
 
-#exec-flow-graph {
-	width: 100%;
+#graph-container {
+	width: auto;
 	height: 100%;
 }
 
-#exec-flow-graph.limit-max-width {
+#graph-container.limit-max-width {
 	max-width: 80% !important;
+}
+
+svg {
+	width: 100%;
+	height: 100%;
+
+	overflow: visible;
+}
+path.link {
+	fill: none;
+	stroke: #666;
+	stroke-width: 1.5px;
+}
+text {
+	font-family: sans-serif;
+	pointer-events: none;
+	color: white;
+}
+foreignObject {
+	overflow: visible;
 }
