--- a/R_source_code/R-3.6.2/src/include/abd_tool/displayer/index.html
+++ b/R_source_code/R-3.6.2/src/include/abd_tool/displayer/index.html
@@ -43,49 +43,12 @@
             <div class="h-100 w-100 pane-opacity" data-path="/1">
                 <div class="w-100 h-100 d-block pane-opacity" data-path="/1/1">
                     <div class="col-lg h-100">
-                        <div class="h-100 w-100 pane-opacity" data-path="/1">
-                            
+                        <div class="h-100 w-100 pane-opacity overflow-hidden" data-path="/1">
                             <div class="container-fluid mt-1">
-                                <div class="row">
-                                    <div class="col-9">
-                                        <label class="inner-title">Execution graph</label>
-                                       <div class="container-fluid overflow-auto" id="exec-flow-graph">
-                                       </div>
-                                    </div>
-                                    <div class="col">
-                                        <label class="inner-title">Stack trace</label>
-                                        <div class="container-fluid" id="stack-trace-container">
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-                                            <p>TRACE HERE</p>
-
-
-
-                                        </div>
-                                    </div>
-                                </div>
+                                <label class="inner-title">Execution graph</label>
+                            </div>
+                            <div class="col-lg h-100 overflow-auto" id="graph-container">
+                                <svg id="exec-flow-graph"></svg>
                             </div>
                             
                         </div>
@@ -181,15 +144,16 @@
 
 <script src="jquery/js/jquery-3.5.1.min.js"></script>
 <script src="bootstrap-4.3.1-dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
+<script src="d3_lib/d3.js"></script>
 <script src="custom/js/objects.js"></script>
 <script src="custom/js/events.js"></script>
 <script src="custom/js/code.js"></script>
 <script src="custom/js/blocks.js"></script>
-<script src="custom/js/graphProcessor.js"></script>
 <script src="custom/js/index.js"></script>
 <script src="custom/js/eventsProcessor.js"></script>
 <script src="custom/js/objProcessor.js"></script>
+
+<script src="custom/js/graphProcessor.js"></script>
 <script src="custom/js/codeProcessor.js"></script>
 
 </body>
