Minor fixes and adjustments
-> minor bug fixed (related to big data structure when used for index change visualization)
-> visual tweaking

--- a/abd_installer/files/abd_tool/displayer/custom/css/styles.css
+++ b/abd_installer/files/abd_tool/displayer/custom/css/styles.css
@@ -86,6 +86,18 @@
 	font-weight: bold;
 }
 
+.note {
+	font-size: 12pt;
+	color: red;
+	font-weight: bold;
+}
+
+.note-body {
+	font-size: 11pt;
+	color: var(--title-color);
+	font-weight: normal;
+}
+
 .event-content {
 	font-size: 11pt;
 	color: white;
