Signaling and Displayer
-> Now the application collects data regarding signaling (Errors and Warnings, not messages)
-> Displays icons for warnings on the side of the respective event
-> Errors are displayed with a red label in the line of code (currently only one error supported because try catch usage is not supported)
-> update the abd_path para suportar o novo ficheiro (wrnerr)
-> warnings are bound to events, errors use a variable
-> fixed bug in displayer tooltips
-> created a fake asign event to local variables creation (and its insertion in displayer)

--- a/abd_installer/files/abd_tool/displayer/custom/css/styles.css
+++ b/abd_installer/files/abd_tool/displayer/custom/css/styles.css
@@ -85,6 +85,11 @@
 	color: white;
 	font-weight: bold;
 }
+.error-lbl {
+	font-size: 16pt;
+	color: tomato;
+	font-weight: normal;
+}
 
 .note {
 	font-size: 12pt;
